<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Titles -->
    <string name="app_name">Shop My List</string>
    <string name="widget_defaulttitle">No shopping list selected.</string>
    <string name="description_temp">Add description at runtime</string>
    <string name="text_empty_list">There is no item</string>

    <!-- Menu -->
    <string name="option_about">About</string>
    <string name="action_edit">Edit</string>
    <string name="action_move_up">Move up</string>
    <string name="action_move_down">Move down</string>
    <string name="action_delete">Delete</string>

    <!-- MainListActivity -->
    <string name="description_add_list">Add a new list</string>
    <string name="description_object_visible_on_widget">%1s is visible on widget.</string>

    <!-- DetailListActivity -->
    <string name="description_add_product">Add a new product</string>

    <!-- AboutActivity -->
    <string name="text_version_description">Version %s</string>
    <string name="text_about_description">Lists manager for Android</string>
    <string name="text_about_creator_name" translatable="false">© 2014 Alain Daussin</string>
    <string name="text_about_web_link" translatable="false">https://github.com/mowgliLab/Shop-My-List</string>
    <string name="text_about_library_creators" translatable="false"></string>
    <string name="text_about_license">GNU GENERAL PUBLIC LICENSE Version 3 \nThis program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later versions.</string>

    <!-- Dialogs -->
    <!-- AddList -->
    <string name="hint_listname">List name</string>
    <string name="check_at_the_end">Add at the end</string>
    <string name="text_add_after">Add after :</string>
    <string name="warnin_uncomplete_field">You must fill this field</string>

    <!-- AddProduct -->
    <string name="hint_productname">Product name</string>
    <string name="hint_description">Description (brand, quantity, &#8230;)</string>
    <string name="add_more">Add</string>

</resources>